feat: 초기화된 체스판 출력 구현